src/backend/cuda/snapshots/rjit__backend__cuda__test__paralell.snap
---
source: src/backend/cuda/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 7558506981705016039 with 3 elements
Launched CUDA Kernel 7558506981705016039 with 10 elements
===============================================
Kernel 7558506981705016039:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[24]) {

	.reg.b8   %b <8>; .reg.b16 %w<8>; .reg.b32 %r<8>;
	.reg.b64  %rd<8>; .reg.f32 %f<8>; .reg.f64 %d<8>;
	.reg.pred %p <8>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 4, data: Buffer(0), sbt_hash: 0 } =>
	mov.u32 %r4, %r0;


	// [1]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 5, data: None, sbt_hash: 0 } =>
	mov.u32 %r5, %r0;


	// [2]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 6, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p6, 0x1;


	// [3]: ScheduleVar { op: Scatter { op: None }, deps: [SVarId(0), SVarId(0), SVarId(1), SVarId(2)], ty: U32, reg: 7, data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r5, 4, %rd0;
	st.global.u32 [%rd3], %r4;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

