src/backend/cuda/snapshots/rjit__backend__cuda__test__reindex.snap
---
source: src/backend/cuda/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 7449351086243755274 with 3 elements
===============================================
Kernel 7449351086243755274:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[24]) {

	.reg.b8   %b <10>; .reg.b16 %w<10>; .reg.b32 %r<10>;
	.reg.b64  %rd<10>; .reg.f32 %f<10>; .reg.f64 %d<10>;
	.reg.pred %p <10>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Idx, ty: U32, deps: (0, 0), data: None, sbt_hash: 0 } =>
	mov.u32 %r4, %r0;


	// [1]: ScheduleVar { op: Literal, ty: U32, deps: (0, 0), data: Literal(2), sbt_hash: 0 } =>
	mov.b32 %r5, 0x2;


	// [2]: ScheduleVar { op: Add, ty: U32, deps: (0, 2), data: None, sbt_hash: 0 } =>
	add.u32 %r6, %r4, %r5;

	// [3]: ScheduleVar { op: Literal, ty: Bool, deps: (0, 0), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p7, 0x1;


	// [4]: ScheduleVar { op: And, ty: U32, deps: (2, 4), data: BufferIdx(0), sbt_hash: 0 } =>
	selp.b32 %r8, %r6, 0, %p7;

	// [5]: ScheduleVar { op: Scatter { op: None }, ty: U32, deps: (4, 8), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r4, 4, %rd0;
	st.global.u32 [%rd3], %r8;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

